@@ -1,3 +1,10 @@
+22 May 2009: dht-0.6
+
+  * Fixed a buffer overflow (when reading) in parse_message.
+  * Fixed slightly inacurrate metric computation when searching.
+  * Removed a slightly inaccurate shortcut when responding to find_nodes.
+  * Relaxed the rate-limiting parameters to 4 requests per second.
+
 19 May 2009: dht-0.5
 
   * Made reading of /dev/urandom a function provided by the user.
